--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "autoprefixer": "^10.4.15",
     "live-server": "^1.2.2",
     "postcss-cli": "^10.1.0",
+    "prettier": "^3.0.2",
+    "prettier-plugin-tailwindcss": "^0.5.3",
     "tailwindcss": "^3.3.3"
   }
 }
