--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "prettier": "^3.0.2",
     "prettier-plugin-tailwindcss": "^0.5.3",
     "tailwindcss": "^3.3.3"
+  },
+  "dependencies": {
+    "masonry-layout": "^4.2.2"
   }
 }
